--- a/coder/package.json
+++ b/coder/package.json
@@ -18,6 +18,7 @@
     "drizzle-orm": "^0.30.10",
     "lucide-react": "^0.379.0",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
     "react": "^18",
